3 microservices, consume microservices and Xunit

--- a/TiendaServicios.Api.Libro/appsettings.json
+++ b/TiendaServicios.Api.Libro/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnectionPg": "Server=localhost;Database=tiendalibroautor;Port=5432;User Id=postgres;Password=whatthehell;"
+        "ConnectionString": "Data Source=localhost; Initial Catalog=TiendaLibro; User Id=sa;Password=Whatthehell01$;",
     },
     "Logging": {
         "LogLevel": {
